# Credit-Risk-Project

./: .gitignore  pyproject.toml
credit_scoring_project/machinelearning/: MachineLearningProduce.py
credit_scoring_project/models/: Model.py  ModelAPI.py
credit_scoring_project/services/: APIService.py  BankService.py  CreditCandidateService.py
